Fix alignments

--- a/assets/stylesheets/header.css
+++ b/assets/stylesheets/header.css
@@ -11,6 +11,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 
@@ -89,7 +90,7 @@ header nav ul.menu li a:hover {
 main#main-content {
     display: flex;
     flex-direction: column;
-    align-items: baseline;
+    align-items: center;
     justify-content: center;
     margin: 0;
     border-bottom: 1px solid #E1E0E6;
