--- a/assets/stylesheets/home.css
+++ b/assets/stylesheets/home.css
@@ -5,19 +5,21 @@
 /* Início Seção Banner */
 section.banner {
     display: flex;
-    height: 900px;
+    flex-direction: column;
+    align-items: start;
+    height: 100vh;
+    width: 100%;
     background: url('../images/pages/home/banner.png') no-repeat;
     background-size: cover;
     position: relative;
     margin: 0 0 48px 0;
-    padding: 0 227px 0 227px;
 }
 
 section.banner p.overlay-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0;
+    margin: 320px 0 0 227px;
     grid-area: text;
     background: transparent;
  }
